# SimpleOps

./: .gitignore  README.md  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
models/: .gitignore
notebooks/: Final Notebook.ipynb  Functions_Final Notebook-Copy1.ipynb  Ideas.txt  Ops_Final Notebook.ipynb  Training Code.ipynb  Trial 1.ipynb  Trial 2.ipynb  Untitled.ipynb  best_taxi_model.pt
reports/: .gitignore
src/ETL/: data_load.py  data_split.py  featurize.py  null_handling.py
src/eval/: LGBM_eval.py  PyNN_eval.py  Tabnet_eval.py  XGBoost_eval.py
src/model/training/: LGBM_model.py  PyNN.py  Tabnet_model.py  xgboost_model.py
src/reports/: .gitignore  kdeplot.py  metrics.json  metrics_pynn.json  metrics_xgboost.json
